--- a/index.html
+++ b/index.html
@@ -2603,7 +2603,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }, Math.random() * 12000 + 5000);
     
   </script>
-
+  <script>
+    //Tag for 'FAÇA UM ORÇAMENTO' button
+    document.querySelector('a.page-scroll.btn.btn-xl').addEventListener('click', (env) => {
+    tracker.send('event', {
+      'category': 'Orçamento',
+      'action': 'click',
+      'label': 'Faça um orçamento',
+      'cd1': 'Source Code'})
+    })
+  </script>
 </body>
 
 </html>
