remove tag  faça um orçamento

--- a/index.html
+++ b/index.html
@@ -2605,13 +2605,13 @@ window["tracker"].send("pageview", {
   </script>
   <script>
     //Tag for 'FAÇA UM ORÇAMENTO' button
-    document.querySelector('a.page-scroll.btn.btn-xl').addEventListener('click', (env) => {
+    /*document.querySelector('a.page-scroll.btn.btn-xl').addEventListener('click', (env) => {
     tracker.send('event', {
       'category': 'Orçamento',
       'action': 'click',
       'label': 'Faça um orçamento',
       'cd1': 'Source Code'})
-    })
+    })*/
     
     //TAG: Home - Scroll - Banhytics - Final da página
     function getScrollPercentage() {
